[package]
name = "mochaexec"
version = "1.2.0"
edition = "2024"
description = "sudo if it was actually good. for responsible adults only."
readme = "README.md"  # who is the idiot that doesn't know this???
repository = "https://github.com/Butterroach/mochaexec"

[dependencies]
nix = { version = "0.31.1", features = ["process", "user", "term"] }
pam-client = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
strfmt = "0.2.4"
termion = "4.0.5"
toml = "0.9.2"
zeroize = "1.8.2"

[workspace.metadata.cross.build]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libpam-dev:$CROSS_DEB_ARCH"
]
